<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health_Tracking</string>
    <string name="app_version">0.1.0</string>
    <string name="service_name">Monitor Service</string>
    <string name="login_screen">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="Login">Login</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="empty_string"></string>
    <string name="action_signup">Sign Up</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>
    <string name="action_exit">Exit</string>
    <string name="action_start_service">Start Service</string>
    <string name="action_stop_service">Stop Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_show_rec">Records</string>
    <string name="action_info">Info</string>
    <string name="action_email_me">Email Me</string>
    <string name="title_activity_show_rec">Records</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="for_user">For User</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    
    <string name="record_time">Time</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="heartbeat">Heartbeat</string>

    <string name="email">Email</string>

    <string name="bt_status">Bluetooth Status:</string>
    <string name="bt_on">Turn On</string>
    <string name="bt_off">Turn Off</string>
    <string name="bt_list">List Paired Devices</string>
    <string name="bt_find">Search Devices</string>
    <string name="bt_connect">Connect Device</string>
    <string name="bt_disconnect">Disconnect Device</string>
    <string name="bt_debug">Debug Device</string>
    <string name="ble_not_supported">BLE Not Supported</string>

    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>

    <string name="toast_connected_to">Connected to</string>
    <string name="toast_unable_to_connect">Unable to connect device</string>
    <string name="toast_connection_lost">Device connection was lost</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>
    <string name="special_keys">Special keys</string>

    <!-- Preference dialog -->
    <string name="general_preferences">General</string>

    <string name="title_localhecho_preference">Local echo</string>
    <string name="summary_localecho_preference">Display the key strokes</string>

    <string name="title_allowinsecureconnections_preference">Allow insecure connections</string>
    <string name="summary_allowinsecureconnections_preference">Allow bluetooth insecure connections</string>

    <string name="incoming_end_of_line">Incoming End of Line</string>
    <string name="outgoing_end_of_line">Outgoing End of Line</string>

    <string name="title_end_of_line_0D_preference">CR (0x0D) character</string>
    <string name="summary_end_of_line_0D_preference"></string>
    <string name="dialog_title_incoming_end_of_line_0D_preference">Incoming CR (0x0D) character</string>
    <string name="dialog_title_outgoing_end_of_line_0D_preference">Outgoing CR (0x0D) character</string>

    <string name="title_end_of_line_0A_preference">LF (0x0A) character</string>
    <string name="summary_end_of_line_0A_preference"></string>
    <string name="dialog_title_incoming_end_of_line_0A_preference">Incoming LF (0x0A) character</string>
    <string name="dialog_title_outgoing_end_of_line_0A_preference">Outgoing LF (0x0A) character</string>

    <string name="text_preferences">Text</string>

    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>

    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>

    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>

    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>

    <string name="menu_start_logging">Start logging</string>
    <string name="menu_stop_logging">Stop logging</string>
    <string name="menu_logging_started">Logging started</string>
    <string name="menu_logging_stopped">Logging stopped</string>
    <string name="menu_about">About</string>

    <string name="title_screenorientation_preference">Screen orientation</string>
    <string name="summary_screenorientation_preference">Choose the screen orientation</string>
    <string name="dialog_title_screenorientation_preference">Screen orientation</string>

    <string name="pymasde_es">http://pymasde.es/</string>

    <!-- Don't localize these default values -->
    <string name="default_value_localecho_preference">false</string>
    <string name="default_value_allowinsecureconnections_preference">true</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">2</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="default_value_end_of_line_0D_preference">13</string>
    <string name="default_value_end_of_line_0A_preference">10</string>
    <string name="default_screenorientation_preference">0</string>
    <string name="error_connect_failed">Failed to connect</string>
    <string name="error_connect_lost">Connection lost</string>
</resources>
